# rc_logistics_robot

./: .gitignore  CMakeLists.txt  README.md  connect.sh  export.sh  package.xml
launch/: amcl.launch  mapping_real.launch  mapping_sim.launch  move_base_real.launch  move_base_sim.launch  navigation_real.launch  navigation_sim.launch  qr_goals_real.launch  qr_goals_sim.launch
maps/: frames.gv  map_real.yaml  map_sim.yaml  save_map.sh
param/real/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapping_params.yaml  move_base_params.yaml
param/sim/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapping_params.yaml  move_base_params.yaml
rviz/: mapping_real.rviz  real.rviz  sim.rviz
src/: qr_goals_real_node.py  qr_goals_sim_node.py
worlds/: frames.gv  sim.world
