<?xml version="1.0"?>
<package format="2"> 
  <name>rc_logistics_robot</name>
  <version>0.0.0</version>
  <description>
    Cognitive Robotics 2021/2022 project developed by João Sousa and Nuno Marques, for their Masters Degree in Robotics, A.I. and Control, DEEC @ UC
  </description>
  <maintainer email="nunoandrept@gmail.com">Nuno Marques</maintainer>
  <maintainer email="joaopsousa99@gmail.com">João Sousa</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/joaopsousa99/rc_logistics_robot</url>
  <author email="nunoandrept@gmail.com">Nuno Marques</author>
  <author email="joaopsousa99@gmail.com">João Sousa</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>yaml-cpp</depend>
  <export></export>
</package>
